<resources>
    <string name="app_name">Notification Job Scheduler</string>
    <string name="network_type_required">Network type required</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="wifi">Wifi</string>
    <string name="not_set">Not Set</string>
    <string name="override_deadline">Override Deadline:</string>
</resources>
