<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"
        android:text="@string/network_type_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RadioGroup
        android:id="@+id/networkOptions"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/noNetwork"
            android:text="@string/none"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/anyNetwork"
            android:text="@string/any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/wifiNetwork"
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:text="@string/requires"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/deviceIdleSwitch"
            android:text="@string/device_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/deviceChargingSwitch"
            android:text="@string/device_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/seekBarLabel"
            android:text="@string/override_deadline"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/seekBarProgress"
            android:text="@string/not_set"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/schedule_Job"
        android:onClick="scheduleJob"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_job"/>

    <Button
        android:id="@+id/cancel_Job"
        android:onClick="cancelJob"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_job"/>


</LinearLayout>